finished the error hanaling video

--- a/asynchronous/index.html
+++ b/asynchronous/index.html
@@ -25,9 +25,9 @@
         </article>
         -->
       </div>
-      <!-- <div>
+      <div>
         <img src="pic/2020-10-09_08-38-17-8a6a9fe94f6f9000475d9ba46342d92b.png" alt="" style="width: 500px;">
-      </div> -->
+      </div>
       <button class="btn-country">Where am I?</button>
       <div class="images"></div>
     </main>
