--- a/Modules/index.html
+++ b/Modules/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <!-- <script type="module" defer src="script.js"></script> -->
     <!-- <script defer src="script.js"></script> -->
-    <script type="module" defer src="notes/notes.js"></script>
+    <script type="module" defer src="notes.js"></script>
 
     <title>Modern JavaScript Development: Modules and Tooling</title>
     <style>
